# Talk2DINO

./: dino_extraction_v2.py  pyproject.toml  text_features_extraction.py  train_vits.sh
configs/: vits_mlp_infonce.yaml
src/: dataset.py  metrics.py  train_util.py
weights/: vits_mlp_infonce.pth  vits_mlp_infonce_noreg.pth
